--- a/meson.build
+++ b/meson.build
@@ -14,4 +14,8 @@ if get_option('compile_server')
     subdir('server')
 endif
 
+if get_option('compile_ime')
+    subdir('ime')
+endif
+
 run_target('run', command: ['scripts/run-scrcpy.sh'])
